--- a/PART 1.ipynb
+++ b/PART 1.ipynb
@@ -643,7 +643,7 @@
    "id": "ae83313a-86f6-4176-b1f9-641bab6519f8",
    "metadata": {},
    "source": [
-    "# Comparation of the NMF method with the Principal Component Analysis (PCA) method"
+    "# Comparison of the NMF method with the Principal Component Analysis (PCA) method"
    ]
   },
   {
